// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders first tab by default 1`] = `
<Tabs>
  <withStateHandlers(withPropsOnChange(Component))
    theme={Object {}}
  >
    <withPropsOnChange(Component)
      onTabClick={[Function]}
      selectedIndex={0}
      theme={Object {}}
    >
      <Component
        body={
          <p>
            Wazzup!
          </p>
        }
        onTabClick={[Function]}
        selectedIndex={0}
        theme={Object {}}
      >
        <ul>
          <withHandlers(Component)
            active={true}
            disabled={false}
            header={[Function]}
            index={0}
            key="0/.0"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={true}
              disabled={false}
              header={[Function]}
              index={0}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={true}
            header={[Function]}
            index={1}
            key="1/.1"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={true}
              header={[Function]}
              index={1}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={false}
            header={[Function]}
            index={2}
            key="2/.2"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={false}
              header={[Function]}
              index={2}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
        </ul>
        <div>
          <p>
            Wazzup!
          </p>
        </div>
      </Component>
    </withPropsOnChange(Component)>
  </withStateHandlers(withPropsOnChange(Component))>
</Tabs>
`;

exports[`Tabs respects defaultSelectedIndex property 1`] = `
<Tabs
  defaultSelectedIndex={2}
>
  <withStateHandlers(withPropsOnChange(Component))
    defaultSelectedIndex={2}
    theme={Object {}}
  >
    <withPropsOnChange(Component)
      defaultSelectedIndex={2}
      onTabClick={[Function]}
      selectedIndex={0}
      theme={Object {}}
    >
      <Component
        body={
          <p>
            Wazzup!
          </p>
        }
        defaultSelectedIndex={2}
        onTabClick={[Function]}
        selectedIndex={0}
        theme={Object {}}
      >
        <ul>
          <withHandlers(Component)
            active={true}
            disabled={false}
            header={[Function]}
            index={0}
            key="0/.0"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={true}
              disabled={false}
              header={[Function]}
              index={0}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={true}
            header={[Function]}
            index={1}
            key="1/.1"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={true}
              header={[Function]}
              index={1}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={false}
            header={[Function]}
            index={2}
            key="2/.2"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={false}
              header={[Function]}
              index={2}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
        </ul>
        <div>
          <p>
            Wazzup!
          </p>
        </div>
      </Component>
    </withPropsOnChange(Component)>
  </withStateHandlers(withPropsOnChange(Component))>
</Tabs>
`;

exports[`Tabs respects selectedIndex property 1`] = `
<Tabs
  defaultSelectedIndex={2}
  selectedIndex={0}
>
  <withStateHandlers(withPropsOnChange(Component))
    defaultSelectedIndex={2}
    selectedIndex={0}
    theme={Object {}}
  >
    <withPropsOnChange(Component)
      defaultSelectedIndex={2}
      onTabClick={[Function]}
      selectedIndex={0}
      theme={Object {}}
    >
      <Component
        body={
          <p>
            Wazzup!
          </p>
        }
        defaultSelectedIndex={2}
        onTabClick={[Function]}
        selectedIndex={0}
        theme={Object {}}
      >
        <ul>
          <withHandlers(Component)
            active={true}
            disabled={false}
            header={[Function]}
            index={0}
            key="0/.0"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={true}
              disabled={false}
              header={[Function]}
              index={0}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={true}
            header={[Function]}
            index={1}
            key="1/.1"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={true}
              header={[Function]}
              index={1}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
          <withHandlers(Component)
            active={false}
            disabled={false}
            header={[Function]}
            index={2}
            key="2/.2"
            onClick={[Function]}
            theme={Object {}}
          >
            <Component
              active={false}
              disabled={false}
              header={[Function]}
              index={2}
              onClick={[Function]}
              theme={Object {}}
            >
              <li
                className=""
                onClick={[Function]}
              />
            </Component>
          </withHandlers(Component)>
        </ul>
        <div>
          <p>
            Wazzup!
          </p>
        </div>
      </Component>
    </withPropsOnChange(Component)>
  </withStateHandlers(withPropsOnChange(Component))>
</Tabs>
`;
